--- a/app/views/layouts/review_site.html.erb
+++ b/app/views/layouts/review_site.html.erb
@@ -18,7 +18,14 @@
               <li class="logo" style="float: left">
                 <a href="/">mooovi</a>
               </li>
-              <li class="entry_button" style="float: right">
+              <% if user_signed_in? %>
+                <li class="entry_button" style="float: right">
+                  <%= link_to "サインアウト", destroy_user_session_path, method: :delete %>
+                </li>
+                <li class="entry_button" style="float: right">
+                  <a href="/users/<%= current_user.id %>">マイページ</a>
+                </li>
+              <% end %>              <li class="entry_button" style="float: right">
                 <a href="/products/search">投稿する</a>
               </li>
             </ul>
@@ -32,36 +39,36 @@
               <i class="icon-crown color-gray-light"></i>投稿ランキング
             </h4>
             <ul class="listview listview--condensed text-small">
-              <% [].each.with_index(1) do |product, i| %>
-              <li data-cinema-id="346394">
-                <a href="/products/<%= product.id %>">
-                  <div class="box">
-                    <div class="box__cell w40 align-center">
-                      <p class="label bgcolor-gray-lighter align-center">
-                        <%= i %>
-                      </p>
-                    </div>
-                    <div class="box__cell pl1em">
-                      <p class="text-xsmall no-space">
-                        <%= product.title %>
-                      </p>
-                      <img src="<%= product.image_url %>" alt="">
-                    </div>
-                  </div>
-                </a>
-              </li>
-              <% end %>
-            </ul>
-          </aside>
-        </div>
-      </div>
+              <% @ranking.each.with_index(1) do |product, i| %>
+          <li data-cinema-id="346394">
+            <a href="/products/<%= product.id %>">
+              <div class="box">
+                <div class="box__cell w40 align-center">
+                  <p class="label bgcolor-gray-lighter align-center">
+                    <%= i %>
+                  </p>
+                </div>
+                <div class="box__cell pl1em">
+                  <p class="text-xsmall no-space">
+                    <%= product.title %>
+                  </p>
+                  <img class="movie-image" src="<%= product.image_url %>" alt="" width="200">
+                </div>
+              </div>
+            </a>
+          </li>
+          <% end %>
+        </ul>
+      </aside>
     </div>
   </div>
+</div>
+</div>
 
-        <div class="copyright">
-          Copyright (C) 2015  XXX Corporation. All Rights Reserved.
-        </div>
-      </div>
-    </div>
-  </body>
+<div class="copyright">
+  Copyright (C) 2015  XXX Corporation. All Rights Reserved.
+</div>
+</div>
+</div>
+</body>
 </html>
